src/test/resources/amyc/typer/passing/Match3.amy
object Constructors
  abstract class Foo 
  case class Bar(i: Int(32)) extends Foo
  case class Baz(b: Boolean, f: Foo) extends Foo

  abstract class Foo2
  case class Bar2(i: Int(32)) extends Foo2
  case class Baz2(b: Boolean, f: Foo2) extends Foo2

  val x: Boolean = Bar(1) match {
    case Bar(1) => true
    case Baz(x, Baz(y, Bar(z))) =>
      x || y && z < 0
    case Baz(_, Bar(_)) => false
  };
  x
end Constructors
